After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 667794 - g_file_get_path() shouldn't return NULL
g_file_get_path() shouldn't return NULL
Status: RESOLVED FIXED
Product: gvfs
Classification: Core
Component: trash backend
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Allison Karlitskaya (desrt)
gvfs-maint
Depends on:
Blocks:
 
 
Reported: 2012-01-12 16:59 UTC by Bastien Nocera
Modified: 2012-07-13 19:30 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
trash: Make it possible to get to real URI (1.40 KB, patch)
2012-07-11 23:29 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2012-01-12 16:59:44 UTC
It should return the value contained in the "trash::orig-path" property instead.
Comment 1 Bastien Nocera 2012-01-12 17:10:29 UTC
Scratch that, trash::orig-path isn't what I was looking for.

It needs to return the path to the local file as returned by trash_backend_get_file() internally.
Comment 2 Bastien Nocera 2012-07-11 23:29:49 UTC
Created attachment 218597 [details] [review]
trash: Make it possible to get to real URI

So that the files can be poked direction, without the indirection.
This makes it possible for Totem to play DVDs from the trash for example.
Comment 3 Tomas Bzatek 2012-07-13 14:35:48 UTC
Review of attachment 218597 [details] [review]:

Looks good to me, this would be nice to have. Haven't tested though.
Comment 4 Bastien Nocera 2012-07-13 19:30:55 UTC
Attachment 218597 [details] pushed as 89d6253 - trash: Make it possible to get to real URI