trash: Make it possible to get to real URI

So that the files can be poked direction, without the indirection.
This makes it possible for Totem to play DVDs from the trash for example.

https://bugzilla.gnome.org/show_bug.cgi?id=667794